force-app/main/default/objects/Contract/fields/CWS_Renewal_Uplift_Applicable__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Uplift_Applicable__c</fullName>
    <description>Renewal Uplift Applicable (Renewal Years) will decide for how many renewals, Renewal Cap % will be applicable</description>
    <inlineHelpText>Renewal Uplift Applicable (Renewal Years) will decide for how many renewals, Renewal Cap % will be applicable</inlineHelpText>
    <label>Renewal Uplift Applicable (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>