force-app/main/default/objects/Contract/fields/CWS_Reseller_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reseller_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Reseller Account)</relationshipLabel>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>