force-app/main/default/objects/Contract/fields/CWS_Route_to_Market__c.field-meta.xml
<CustomField>
    <fullName>CWS_Route_to_Market__c</fullName>
    <description>Route to market of the Contract.</description>
    <label>Route to Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>IIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>