force-app/main/default/objects/Contract/fields/CWS_SAT_GAT__c.field-meta.xml
<CustomField>
    <fullName>CWS_SAT_GAT__c</fullName>
    <label>SAT GAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>