force-app/main/default/objects/Contract/fields/CWS_Secondary_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Secondary_Recipient_Email__c</fullName>
    <label>Secondary Recipient Email</label>
    <type>Email</type>
</CustomField>