force-app/main/default/objects/Contract/fields/CWS_Secondary_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Secondary_Recipient_Name__c</fullName>
    <label>Secondary Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>