force-app/main/default/objects/Contract/fields/CWS_Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Ship To Account)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>