force-app/main/default/objects/Contract/fields/CWS_Ship_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ship_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Ship To Contact)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>