force-app/main/default/objects/Contract/fields/CWS_Sold_To_Address__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sold_To_Address__c</fullName>
    <formula>SBQQ__Quote__r.CWS_Sold_To_Address__c</formula>
    <label>Sold To Address</label>
    <type>Text</type>
</CustomField>