force-app/main/default/objects/Contract/fields/CWS_Sold_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sold_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sold To Contact associated with this contract.</description>
    <inlineHelpText>Sold To Contact associated with this contract.</inlineHelpText>
    <label>Sold To Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select contact which are associated to this Sold To Account.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <infoMessage>Select contact which are associated to this Sold To Account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Sold To Contact)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>