force-app/main/default/objects/Contract/fields/CWS_Source__c.field-meta.xml
<CustomField>
    <fullName>CWS_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Contract from which this contract is cloned.</description>
    <inlineHelpText>Source Contract from which this contract is cloned.</inlineHelpText>
    <label>Source</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>