force-app/main/default/objects/Contract/fields/CWS_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Status__c</fullName>
    <description>Contract Status
If Cancelled flag = TRUE, then Status = Terminated
If Start date &lt;= Today and End date &gt;= Today, Status = Active
If Start date &gt; Today, then Status = Inactive
If End date &lt; Today and Cancelled Flag is False, then Status = Expired</description>
    <formula>IF(CWS_Cancelled__c=TRUE, &apos;Terminated&apos;,
IF(SBQQ__Evergreen__c=TRUE,
IF(CWS_Master__c=true,IF(CWS_Legacy_Formula_Key__c!=null,&apos;Expired&apos;,IF(StartDate&lt;=TODAY(),&apos;Active&apos;,&apos;Inactive&apos;)),IF(StartDate&lt;=TODAY(),&apos;Active&apos;,&apos;Inactive&apos;)),
IF(AND(StartDate&lt;=TODAY(), EndDate&gt;=TODAY()), &apos;Active&apos;,
IF(StartDate&gt;TODAY(), &apos;Inactive&apos;,
IF(EndDate&lt;TODAY(), &apos;Expired&apos;,&apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Cancelled flag = TRUE, then Status = Terminated
If Start date &lt;= Today and End date &gt;= Today, Status = Active
If Start date &gt; Today, then Status = Inactive
If End date &lt; Today and Cancelled Flag is False, then Status = Expired</inlineHelpText>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>