force-app/main/default/objects/Contract/fields/CWS_Tax_VAT__c.field-meta.xml
<CustomField>
    <fullName>CWS_Tax_VAT__c</fullName>
    <description>Tax/VAT amount</description>
    <inlineHelpText>Tax/VAT amount</inlineHelpText>
    <label>Tax/VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>