force-app/main/default/objects/Contract/fields/CWS_Temporary_License__c.field-meta.xml
<CustomField>
    <fullName>CWS_Temporary_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that all products added in this quote are temporary/migration licenses. This quote will not renew after temporary license period.</description>
    <inlineHelpText>Indicates that all products added in this quote are temporary/migration licenses. This quote will not renew after temporary license period.</inlineHelpText>
    <label>Temporary License</label>
    <type>Checkbox</type>
</CustomField>