force-app/main/default/objects/Contract/fields/CWS_Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>CWS_Total_Contract_Value__c</fullName>
    <description>Total Contract Value of all lines combined.</description>
    <inlineHelpText>Sum of all quote line net prices.</inlineHelpText>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>