force-app/main/default/objects/Contract/fields/CWS_Total_Distributor_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_Total_Distributor_Net_Price__c</fullName>
    <description>Total Distributor Net Price</description>
    <inlineHelpText>Total Distributor Net Price</inlineHelpText>
    <label>Total Distributor Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>