force-app/main/default/objects/Contract/fields/CWS_Total_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Total_Net_Amount__c</fullName>
    <description>Total Net Amount of each non-optional line item in this quote.</description>
    <inlineHelpText>Total Net Amount of each non-optional line item in this quote.</inlineHelpText>
    <label>Total Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>