force-app/main/default/objects/Contract/fields/CWS_Total_Regular_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Total_Regular_Amount__c</fullName>
    <description>Roll up of regular amounts of Subscription products.</description>
    <inlineHelpText>Total amount of non-optional line times before additional discounts are applied.</inlineHelpText>
    <label>Total Regular Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>