force-app/main/default/objects/Contract/fields/CWS_Total_Reseller_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_Total_Reseller_Net_Price__c</fullName>
    <description>Total Reseller Net Price</description>
    <inlineHelpText>Total Reseller Net Price</inlineHelpText>
    <label>Total Reseller Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>