force-app/main/default/objects/Contract/fields/CWS_TotalSalesUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>CWS_TotalSalesUnitPrice__c</fullName>
    <description>Roll up of the all the Subscription&apos;s Sales Unit Price</description>
    <label>Total Sale Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>