force-app/main/default/objects/Contract/fields/CWS_Transaction_Reason__c.field-meta.xml
<CustomField>
    <fullName>CWS_Transaction_Reason__c</fullName>
    <description>This field determines the transaction reason of the quote which is realted to this contract.</description>
    <label>Transaction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Transaction_Reason</valueSetName>
    </valueSet>
</CustomField>