force-app/main/default/objects/Contract/fields/CWS_TransactionReason__c.field-meta.xml
<CustomField>
    <fullName>CWS_TransactionReason__c</fullName>
    <label>Amend Transaction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Transaction_Reason</valueSetName>
    </valueSet>
</CustomField>