force-app/main/default/objects/Contract/fields/Renewal_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Number__c</fullName>
    <description>Renewal Opportunity Number</description>
    <formula>SBQQ__RenewalOpportunity__r.CWS_Opportunity_No__c</formula>
    <inlineHelpText>Renewal Opportunity Number</inlineHelpText>
    <label>Renewal Opportunity Number</label>
    <type>Text</type>
</CustomField>