force-app/main/default/objects/Contract/validationRules/Prevent_RenQuote_on_ClosedRenewalOpty.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_RenQuote_on_ClosedRenewalOpty</fullName>
    <active>true</active>
    <description>Cannot create a renewal quote from contract when the Renewal Type on Contract is &apos;Non-Renewable&apos;</description>
    <errorConditionFormula>IF(AND(CONTAINS($Setup.CWS_Bypass_Settings__c.CWS_Bypass_Objects__c, &quot;Contract&quot;) ,$Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c), FALSE,
AND(
ISCHANGED(SBQQ__RenewalQuoted__c),
SBQQ__RenewalQuoted__c=true,
SBQQ__RenewalOpportunity__c!=null,
ISPICKVAL(SBQQ__RenewalOpportunity__r.StageName,&apos;Closed Lost&apos;)
)
)</errorConditionFormula>
    <errorMessage>You cannot create a renewal quote since the corresponding renewal opportunity is already closed</errorMessage>
</ValidationRule>