force-app/main/default/objects/Contract/listViews/CMS_Contract_View.listView-meta.xml
<ListView>
    <fullName>CMS_Contract_View</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CWS_Status__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CWS_Product_Categories__c</columns>
    <columns>CWS_Master__c</columns>
    <columns>SBQQ__Evergreen__c</columns>
    <columns>CWS_LegacyEvergreen__c</columns>
    <columns>SBQQ__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Master__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CWS_Product_Categories__c</field>
        <operation>contains</operation>
        <value>Command</value>
    </filters>
    <filters>
        <field>CWS_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>CMS Contract View</label>
</ListView>