force-app/main/default/objects/Contract/listViews/CWS_Activated_Contracts.listView-meta.xml
<ListView>
    <fullName>CWS_Activated_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CWS_Bill_To_Account__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>CWS_Cancelled__c</columns>
    <columns>CWS_Route_to_Market__c</columns>
    <columns>CWS_Contract_ACV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>Activated Contracts</label>
    <language>en_US</language>
</ListView>