force-app/main/default/objects/Contract/listViews/CWS_Contract_with_Renewal_Opportunity.listView-meta.xml
<ListView>
    <fullName>CWS_Contract_with_Renewal_Opportunity</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CWS_Bill_To_Account__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>CWS_Cancelled__c</columns>
    <columns>CWS_Route_to_Market__c</columns>
    <columns>CWS_Contract_ACV__c</columns>
    <columns>SBQQ__RenewalOpportunity__c</columns>
    <columns>CWS_Renewal_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__RenewalOpportunity__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Contract with Renewal Opportunity</label>
    <language>en_US</language>
</ListView>