force-app/main/default/objects/Contract/listViews/CWS_Contracts_All.listView-meta.xml
<ListView>
    <fullName>CWS_Contracts_All</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CWS_Bill_To_Account__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>CWS_Cancelled__c</columns>
    <columns>CWS_Route_to_Market__c</columns>
    <columns>CWS_Contract_ACV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Quote_Type__c</field>
        <operation>equals</operation>
        <value>Amendment</value>
    </filters>
    <filters>
        <field>CWS_Quote_Sub_Type__c</field>
        <operation>notEqual</operation>
        <value>Credit,Rebill</value>
    </filters>
    <label>Contracts - All</label>
</ListView>