force-app/main/default/objects/Contract/listViews/Quinton_Perch_View.listView-meta.xml
<ListView>
    <fullName>Quinton_Perch_View</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CWS_Legal_Entity__c</columns>
    <columns>CWS_Sold_To_Address__c</columns>
    <columns>CWS_Product_Categories__c</columns>
    <columns>CWS_Contract_ACV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Product_Categories__c</field>
        <operation>notEqual</operation>
        <value>Perch</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <filters>
        <field>CWS_Status__c</field>
        <operation>notEqual</operation>
        <value>Expired</value>
    </filters>
    <filters>
        <field>CWS_Legal_Entity__c</field>
        <operation>equals</operation>
        <value>CW-UK,CW-US</value>
    </filters>
    <filters>
        <field>CWS_Sold_To_Address__c</field>
        <operation>contains</operation>
        <value>Kingdom</value>
    </filters>
    <label>Quinton Perch View</label>
</ListView>