force-app/main/default/objects/Contract/listViews/RTM_Off.listView-meta.xml
<ListView>
    <fullName>RTM_Off</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CWS_Status__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CWS_Bill_To_Account__c</columns>
    <columns>CWS_Reseller_Account__c</columns>
    <columns>CWS_Product_Categories__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CWS_Legal_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Reseller_Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CWS_Route_to_Market__c</field>
        <operation>equals</operation>
        <value>Channel</value>
    </filters>
    <label>RTM Off</label>
</ListView>